kubernetes-ansible/roles/rest/templates/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rest-ingress
spec:
  rules:
    - http:
        paths:
          - path: /rest-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: graph-api-service
                port:
                  number: 8000
